--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="OPP_resumo.js"></script>
+    <script src="POO_at.js"></script>
 </body>
 </html>
